# chatgpt-tui

./: Cargo.toml
src/: app.rs  main.rs  ui.rs
