[package]
name = "chatgpt-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.2.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1.42.0", features = ["full"] } # "1.42.0"
tui-textarea = "0.7.0"
